--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ input[type="radio"] {
   font-family: Arial, Helvetica, sans-serif;
   font-style: italic;
   width: 480px;
+  font-size: 1.5rem;
  
 }
 
